--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -14,7 +14,8 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li {% if page.sectionid=='download' %} class="active" {% endif %}><a href="{{ "/docs/installation/" | relative_url }}">Download</a></li>
-                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="https://github.com/cmdr2/stable-diffusion-ui/wiki">Docs</a></li>
+                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="https://github.com/easydiffusion/easydiffusion/wiki">Docs</a></li>
+                <li><a href="https://github.com/easydiffusion/easydiffusion" target="_blank">Code</a></li>
             </ul>
         </div>
     </div>
