--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top" style="background: #202122">
     <div class="container navbar-container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
             <a class="navbar-brand" href="/">
-                <span><img src="/media/ed.png"></span>
+                <span><img src="/media/ed.png" width="32" height="32"></span>
             </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
