--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,7 +3,20 @@
 
 {% include head.html %}
 
-<body>
+
+<body style="background-color: #0d0e0f;">
+
+    <style>
+    .panel {
+        background-color: #2c2d30;
+    }
+    .panel .panel-heading {
+        background-color: #2c2d30;
+    }
+    .panel .list-group-item {
+        background-color: #2c2d30 !important;
+    }
+    </style>
 
     {% include topnav.html %}
 
@@ -13,7 +26,6 @@
         </div>
     </div>
 
-    {% include footer.html %}
     {% include js_files.html %}
 </body>
 
