--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,10 +3,19 @@
 
 {% include head.html %}
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
 
 <body style="background-color: #0d0e0f;">
 
     <style>
+    * {
+        font-family: Work Sans, Verdana, Geneva, sans-serif;
+    }
+    h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+        font-family: Work Sans, Verdana, Geneva, sans-serif;
+    }
     .panel {
         background-color: #2c2d30;
     }
